tests/incremental_non_flow_move/incremental_non_flow_move.exp

Initial status:
No errors!

Delete non-@flow file foo.js:
Error -------------------------------------------------------------- test.js:5:9

Error: test.js:5
  5: require('Foo');
             ^^^^^ Cannot resolve module `Foo`.


Found 1 error

Restore non-@flow file foo.js:
No errors!

Done!
